# Pilos-Subgraph-Matching

./: BuildTable.cpp  BuildTable.h  CMakeLists.txt  EdgeListToCSR.cpp  EvaluateQuery.cpp  EvaluateQuery.h  Experiments.cpp  Experiments.h  FilterVertices.cpp  FilterVertices.h  GenerateFilteringPlan.cpp  GenerateFilteringPlan.h  GenerateQuery.cpp  GenerateQuery.h  GenerateQueryPlan.cpp  GenerateQueryPlan.h  GrM.cpp  GrM.h  GraphConverter.cpp  IO.cpp  IO.h  README.md  ReassignLabel.cpp  SelectEdge.cpp  StudyPerformance.cpp  StudyPerformance.h  eigenHelper.cpp  eigenHelper.h  hprdTEST.csvQ  main.cpp  matchingcommand.cpp  matchingcommand.h
KF/: cs.h  spectra.cpp  spectra.h
Spectra/: DavidsonSymEigsSolver.h  GenEigsBase.h  GenEigsSolver.h  JDSymEigsBase.h  SymEigsBase.h  SymEigsSolver.h
build1/: CMakeCache.txt  Makefile  cmake_install.cmake
configuration/: config.h
graph/: graph.cpp  graph.h
libxl/: changelog.txt
matching/: BuildTable.cpp  BuildTable.h  CMakeLists.txt  EdgeListToCSR.cpp  EvaluateQuery.cpp  EvaluateQuery.h  Experiments.cpp  Experiments.h  FilterVertices.cpp  FilterVertices.h  GenerateFilteringPlan.cpp  GenerateFilteringPlan.h  GenerateQuery.cpp  GenerateQuery.h  GenerateQueryPlan.cpp  GenerateQueryPlan.h  GrM.cpp  GrM.h  GraphConverter.cpp  IO.cpp  IO.h  ReassignLabel.cpp  SelectEdge.cpp  StudyPerformance.cpp  StudyPerformance.h  eigenHelper.cpp  eigenHelper.h  main.cpp  matchingcommand.cpp  matchingcommand.h
matching/KF/: cs.h  spectra.cpp  spectra.h
utility/: CMakeLists.txt  QFliter.h  bitsetoperation.cpp  bitsetoperation.h  commandparser.cpp  commandparser.h  computesetintersection.h  (+3 more)
(+3945 files in other folders)
